<resources>
    <string name="app_name">Layout Project</string>
    <string name="txtView">This is my layout project</string>
    <string name="btn3">Button 3</string>
    <string name="btn2">Button 2</string>
    <string name="btn1">Button 1</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="checkbox4">CheckBox4</string>
    <string name="checkbox5">CheckBox5</string>
    <string name="checkbox6">CheckBox6</string>
    <string name="smileyface">smileyface</string>
</resources>